# siaod-2022

./: .gitignore  CMakeLists.txt  LICENSE.md  default.txt  utils.h
Task1/: dynamic_array.h  handler.h  main.cpp  static_array.h  static_array_test.h  traffic_violation.h  utils.h
Task1/arrays/: dynamic_array.h  static_array.h  vector.h
Task1/tests/: dynamic_array_test.h  main.py  static_array_test.h  vector_test.h
src/: handler.h  main.cpp  traffic_violation.h
src/arrays/: dynamic_array.h  static_array.h  vector.h
src/tests/: dynamic_array_test.h  main.py  static_array_test.h  vector_test.h
task2/: CMakeLists.txt  default.txt  main.cpp  modified_list.h
task2/tests/: tests.h
task3/: CMakeLists.txt  calculate_prefix_expression.h  main.cpp  stack_by_list.h
task3/converters/: infix_to_postfix.h  infix_to_prefix.h  postfix_to_infix.h
task4/: CMakeLists.txt  main.cpp
